refactor(wsfev1): relocate CommonMapper to adapter layer
Move CommonMapper from internal.usecase.common to internal.adapter
to enforce hexagonal architecture boundaries. All 21 use case files
updated to import from the new adapter package location.